<resources>
    <string name="app_name">News</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_news">No news found.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_all_label">All</string>
    <string name="settings_football_label">Football</string>
    <string name="settings_travel_label">Travel</string>
    <string name="settings_food_label">Food</string>
    <string name="settings_politics_label">Politics</string>

    <string name="settings_football_value" translatable="false">football</string>
    <string name="settings_travel_value" translatable="false">travel</string>
    <string name="settings_food_value" translatable="false">food</string>
    <string name="settings_politics_value" translatable="false">politics</string>

    <string name="settings_last_month_label">Last month</string>
    <string name="settings_last_three_months_label">Last three months</string>
    <string name="settings_last_year_label">Last Year</string>

    <string name="settings_last_month_value">last_month</string>
    <string name="settings_last_three_months_value">last_three_months</string>
    <string name="settings_last_year_value">last_year</string>

    <string name="settings_date_key" translatable="false">date</string>
    <string name="settings_subject_key" translatable="false">subjects</string>
    <string name="settings_date_def_value">Recent</string>
    <string name="settings_subject_def_value">All</string>
    <string name="settings">Settings</string>
    <string name="settings_date_title">Oldest publication date </string>
    <string name="settings_subject_title">Section</string>
    <string name="settings_subject_def_label">All</string>
</resources>
