<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <ListPreference
        android:defaultValue="@string/settings_date_def_value"
        android:key="@string/settings_date_key"
        android:title="@string/settings_date_title"
        android:entries="@array/settings_date_labels"
        android:entryValues="@array/settings_date_values"/>
    <ListPreference
        android:defaultValue="@string/settings_subject_def_value"
        android:key="@string/settings_subject_key"
        android:entries="@array/settings_subject_labels"
        android:entryValues="@array/settings_subject_values"
        android:title="@string/settings_subject_title" />


</PreferenceScreen>